# trilha-python-dio

00 - Fundamentos/: desafio.py
01 - Estrutura de dados/01 - Listas/: 05_iterar_listas.py  16_sort.py
01 - Estrutura de dados/02 - Tuplas/: 00_declarando_tuplas.py  09_len.py
01 - Estrutura de dados/04 - Dicionários/: 00_declarando_dicionarios.py  02_dicionarios_aninhados.py
01 - Estrutura de dados/05 - Funções/: 00_primeira_funcao.py  01_retorno_da_funcao.py  02_argumentos_nomeados.py  03_args_kwargs.py  04_parametros_somente_por_posicao copy.py  05_parametros_somente_por_nome.py
03 - Decoradores, Iteradores e Geradores/: 1_passagem_param.py  5.1_decorador_retorna_valor_func_decorada.py  5_decorador_com_argumentos copy.py  7_geradores.py
13 - APIs Assíncronas com FastAPI/: pyproject.toml
13 - APIs Assíncronas com FastAPI/dio-blog/: main.py
ProjetosDIO/projeto/sistema-bancario-v2/: main.py
