[tool.poetry]
name = "13 - apis assíncronas com fastapi"
version = "0.1.0"
description = ""
authors = ["Allan-Jhones <allanjhones.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
fastapi = "^0.128.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
